fixed notification menu overflow

--- a/src/styles/NotificationMenu.css
+++ b/src/styles/NotificationMenu.css
@@ -4,6 +4,7 @@
   max-height: 50vh;
   min-width: 380px;
   overflow-y: scroll;
+  max-width: 1vw;
 }
 
 .notification-menu h1 {
@@ -46,4 +47,10 @@
 
 .date {
   color: gray;
+}
+
+@media only screen and (max-width: 480px) {
+  .notification-menu {
+    right: -50px;
+  }
 }
